--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -1,2 +1,5 @@
-sdk.dir=/Users/imac/Library/Android/sdk
-flutter.sdk=/Users/imac/fvm/versions/stable
+sdk.dir=/Users/dhiabechattaoui/Library/Android/sdk
+flutter.sdk=/opt/homebrew/share/flutter
+flutter.buildMode=debug
+flutter.versionName=0.0.1
+flutter.versionCode=1
