--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: video_snapshot_generator
 description: Generate video thumbnails with custom dimensions and quality settings for Flutter applications.
-version: 0.0.2
+version: 0.1.0
 homepage: https://github.com/Dhia-Bechattaoui/video_snapshot_generator
 repository: https://github.com/Dhia-Bechattaoui/video_snapshot_generator
 issue_tracker: https://github.com/Dhia-Bechattaoui/video_snapshot_generator/issues
@@ -24,15 +24,24 @@ topics:
   - images
   - media
   - utilities
+  - thumbnail
+  - video-processing
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
-  flutter: ">=3.10.0"
+  sdk: '>=3.8.0 <4.0.0'
+  flutter: ">=3.32.0"
+
+funding:
+  - https://github.com/sponsors/Dhia-Bechattaoui
 
 dependencies:
-  cross_platform_video_thumbnails: ^0.0.2
+  cross_platform_video_thumbnails: ^0.1.1
   flutter:
     sdk: flutter
+  path: ^1.9.1
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.1
+  universal_io: ^2.2.2
 
 dev_dependencies:
   build_runner: ^2.0.0
