fix: Convert package to Flutter plugin structure and fix iOS thumbnail generation (v0.1.1)
CRITICAL FIXES:
- Fixed MissingPluginException by properly converting package to Flutter plugin
- Moved native Android and iOS implementations from example app to plugin level
- Native implementations now automatically registered when package is added

iOS IMPROVEMENTS:
- Enhanced multiple thumbnail generation with better error handling
- Improved resource management with semaphore (2 concurrent operations)
- Added asynchronous asset loading to ensure video tracks are ready
- Better time position validation and clamping
- Improved thread handling and error logging

CODE QUALITY:
- Fixed all 39 analysis issues (type inference, line lengths, immutable classes)
- Achieved perfect 160/160 Pana score
- 100% API documentation coverage
- All files properly formatted with dart format

PLUGIN STRUCTURE:
- Created Android plugin: VideoSnapshotGeneratorPlugin.kt
- Created iOS plugin: VideoSnapshotGeneratorPlugin.swift
- Added plugin configuration to pubspec.yaml
- Added android/build.gradle and ios/video_snapshot_generator.podspec
- Cleaned up example app (removed duplicate native code)

DOCUMENTATION:
- Updated README with troubleshooting, setup instructions, and improvements
- Updated CHANGELOG with detailed technical notes
- Resized example GIF to 300px width for better loading

OTHER:
- Added lock files to .gitignore (pubspec.lock, Podfile.lock)
- Updated version to 0.1.1

Closes #1

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: video_snapshot_generator
 description: Generate video thumbnails with custom dimensions and quality settings for Flutter applications.
-version: 0.1.0
+version: 0.1.1
 homepage: https://github.com/Dhia-Bechattaoui/video_snapshot_generator
 repository: https://github.com/Dhia-Bechattaoui/video_snapshot_generator
 issue_tracker: https://github.com/Dhia-Bechattaoui/video_snapshot_generator/issues
@@ -35,7 +35,6 @@ funding:
   - https://github.com/sponsors/Dhia-Bechattaoui
 
 dependencies:
-  cross_platform_video_thumbnails: ^0.1.1
   flutter:
     sdk: flutter
   path: ^1.9.1
@@ -53,4 +52,10 @@ dev_dependencies:
   test: ^1.0.0
 
 flutter:
-  # No Flutter-specific dependencies needed for this package
+  plugin:
+    platforms:
+      android:
+        package: com.video_snapshot_generator
+        pluginClass: VideoSnapshotGeneratorPlugin
+      ios:
+        pluginClass: VideoSnapshotGeneratorPlugin
