--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ migrate_working_dir/
 /build/
 coverage/
 *.lcov
+pubspec.lock
+**/pubspec.lock
+**/Podfile.lock
 
 # Symbolication related
 app.*.symbols
